George | #3154 | Write test to make sure the collapse & expand function for this section control is disabled, and code complement to pass it. Besides, change the css style for toggle to fit the design.

--- a/styles/bahmniAppsFormBuilder/_form.scss
+++ b/styles/bahmniAppsFormBuilder/_form.scss
@@ -225,7 +225,6 @@
       left: 10px;
       &.form-builder-toggle{
         cursor: pointer;
-        background: $gray400;
         i {
           width: 1.25em;
           text-align: center;
